# learning-machines

./: .gitignore  LICENSE  README.md  pyproject.toml
notebooks/: 00_sanity_check.ipynb  01_basic_network.ipynb  01_quali_results.ipynb  01_race_results.ipynb
