[project]
name = "learning-machines"
version = "0.1.0"
description = "Sandbox for learning ML / neural networks"
requires-python = ">=3.11,<3.13"
dependencies = [
    "numpy>=2.0",
    "pandas>=2.2",
    "scipy>=1.13",
    "matplotlib>=3.9",
    "seaborn>=0.13",
    "scikit-learn>=1.5",
    "torch>=2.4",
    "torchvision>=0.19",
    "torchaudio>=2.4",
    "tensorboard>=2.17",
    "tqdm>=4.66",
    "ipykernel>=6.29",
    "jupyterlab>=4.2",
    "notebook>=7.2",
    "ipywidgets>=8.1",
    "datasets>=2.20",
    "transformers>=4.44",
    "fastf1>=3.8.3",
]

[tool.uv]
package = false

[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]
torchvision = [{ index = "pytorch-cpu" }]
torchaudio = [{ index = "pytorch-cpu" }]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
